[package]
name = "torrc"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Dave Huseby <dhuseby@mozilla.com>"]
repository = "https://github.com/dhuseby/torrc"
homepage = "https://github.com/dhuseby/torrc"
description = """
Parser for Tor configuration files.
"""

[dependencies]
nom = "~0.3.0"
